--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="panda-mj">
-    <meta name="keywords" content="십이간지 연애유">
+    <meta name="keywords" content="십이간지 연애유형">
     <meta name="description" content="십이간지 연애유형">
     <!-- sns share -->
     <meta property="og:url" content="" />
@@ -50,7 +50,7 @@
         <div class="answerBox"></div>
       </section>
 
-      <section id="result" class="mx-auto my-4 pt-5 pb-5 px-5">
+      <section id="result" class="mx-auto my-4 pt-5 pb-5 px-3">
         <h1>당신의 결과는?!</h1>
         <div class="resultName">
 
