--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
     <link rel="stylesheet" href="./css/qna.css">
     <link rel="stylesheet" href="./css/result.css">
     <link rel="stylesheet" href="./css/animation.css">
+    <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.1.0/kakao.min.js" integrity="sha384-dpu02ieKC6NUeKFoGMOKz6102CLEWi9+5RQjWSV0ikYSFFd8M3Wp2reIcquJOemx" crossorigin="anonymous"></script>
+    <script>
+      Kakao.init('2dd3bb20789fdd7cf1f88aefeb879aff');
+      Kakao.isInitialized();
+    </script>
   </head>
   <body>
     <div class="container">
@@ -61,11 +66,12 @@
         <div class="resultDesc">
 
         </div>
-        <button type="button" class="kakao mt-5 py-2 px-3">
+        <button type="button" class="kakao mt-5 py-2 px-3" onclick="js:kakaoShare()">
           공유하기</button>
       </section>
       <script src="./js/data.js" charset="utf-8"></script>
       <script src="./js/start.js" charset="utf-8"></script> <!-- 자바 코드가 길면 위에 있을 때, 로딩시간이 길어질 수 있음 -->
+      <script src="./js/share.js" charset="utf-8"></script>
     </div>
   </body>
 </html>
