--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="panda-mj">
-    <meta name="keywords" content="십이간지 연애유2">
+    <meta name="keywords" content="십이간지 연애유형">
     <meta name="description" content="십이간지 연애유형">
     <!-- sns share -->
-    <meta property="og:url" content="" />
+    <meta property="og:url" content="https://mjheo.github.io/mj-mbti/" />
     <meta property="og:title" content="십이간지 연애유형" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="img/share.png" />
@@ -66,8 +66,9 @@
         <div class="resultDesc">
 
         </div>
-        <button type="button" class="kakao mt-5 py-2 px-3" onclick="js:kakaoShare()">
-          공유하기</button>
+        <button type="button" class="kakao mt-5 py-2 px-3" onclick="js:setShare()">
+          공유하기
+        </button>
       </section>
       <script src="./js/data.js" charset="utf-8"></script>
       <script src="./js/start.js" charset="utf-8"></script> <!-- 자바 코드가 길면 위에 있을 때, 로딩시간이 길어질 수 있음 -->
