--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
       Kakao.init('2dd3bb20789fdd7cf1f88aefeb879aff');
       Kakao.isInitialized();
     </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HY37Q4JFMX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-HY37Q4JFMX');
+    </script> 
   </head>
   <body>
     <div class="container">
